--- a/BackgroundLogic.tex
+++ b/BackgroundLogic.tex
@@ -2,14 +2,14 @@
 \newcommand{\mathass}[1]{\mathrm{[}#1 {]}}
 \thesischapter{Background: Logic and Program Extraction}{Logic and Program Extraction}
 %%%We use logic to formally reason about the world around us in an abstract way. At the most basic level %%%we are creating abstract propositions, sentences from these propositions and then using formal rules %%%to deal with these propositions and to derive new information or insight. In the following we give a %%%general introduction to logic and describe some of the formalisms used in this thesis. This starts with %%%syntax and semantics of propositional and first order logic.
-This thesis is concerned with using formal methods to verify the correctness of programs. This chapter is concerned one technique in particular that is used to obtain verified programs, namely \emph{program extraction} from proofs as implemented by the interactive theorem prover Minlog. The theorem proven typically specifies the inputs of the system as assumptions and the output of the program as the statement to be proven. A constructive proof is given which describes how to transform the inputs into the required outputs. In the Minlog system the proof is stored as a proof term which can interpretted as a program in the lambda calculus. Once such a proof term has been obtained, it can be automatically translated by the Minlog system into a variety of different functional programming languages. This is due to the Curry-Howard correspondence \cite{HC34, HC58, WH80} which states that every constructive proof can also be seen as a program. It enables a proof system such as natural deduction  can be directly interpreted as a model of computation i.e. the lambda calculus.  A general introduction to program extraction from proofs can be found in \cite{SW11}. This thesis assumes a general background in logic, good general introduction to logic from a proof theoretic perspective is \cite{HandBookProof}. 
+This thesis is concerned with using formal methods to verify the correctness of programs. This chapter is concerned one technique in particular that is used to obtain verified programs, namely \emph{program extraction} from proofs as implemented by the interactive theorem prover Minlog. The theorem proven typically specifies the inputs of the system as assumptions and the output of the program as the statement to be proven. A constructive proof is given which describes how to transform the inputs into the required outputs. In the Minlog system the proof is stored as a proof term which can interpreted as a program in the lambda calculus. Once such a proof term has been obtained, it can be automatically translated by the Minlog system into a variety of different functional programming languages. This is due to the Curry-Howard correspondence \cite{HC34, HC58, WH80} which states that every constructive proof can also be seen as a program. It enables a proof system such as natural deduction  can be directly interpreted as a model of computation i.e. the lambda calculus.  A general introduction to program extraction from proofs can be found in \cite{SW11}. This thesis assumes a general background in logic, good general introduction to logic from a proof theoretic perspective is \cite{HandBookProof}. 
 
 \subsection*{Related Work in the Area of Program Extraction}
-The area number of case studies in the area of extracting programs from proofs. The Minlog system has been used extraction of a normalisation-by-evaulation algorithm for the lambda calculus \cite{UB06}. There is also considerable work in the area of exact real number computation \cite{UB08} which has made use of Coalgebras and Coinduction \cite{UB11}. 
+The area number of case studies in the area of extracting programs from proofs. The Minlog system has been used extraction of a normalisation-by-evaluation algorithm for the lambda calculus \cite{UB06}. There is also considerable work in the area of exact real number computation \cite{UB08} which has made use of Coalgebras and Coinduction \cite{UB11}. 
 
 
 \subsection*{Other Theorem Provers with Program Extraction Capabilities}
-While Minlog is specifically geared towards extracting programs from proofs there are other examples of theorem provers with program extraction capabilities. An early example of work on a theorem prover with program extraction capabilitieis is the Nuprl system \cite{RC86}. There are also other mature theorem provers with program extraction capabilities such as Coq \cite{YB04}, which is based on the Calculus of Inductive Constructions and Isabelle  \cite{TN99,LP94} which is a generic theorem prover with extensions for many logics. More recently a number of theorem provers based on dependent types \cite{PM80} have emerged including Agda \cite{AB09} and IDRIS \cite{EB11}.
+While Minlog is specifically geared towards extracting programs from proofs there are other examples of theorem provers with program extraction capabilities. An early example of work on a theorem prover with program extraction capabilities is the Nuprl system \cite{RC86}. There are also other mature theorem provers with program extraction capabilities such as Coq \cite{YB04}, which is based on the Calculus of Inductive Constructions and Isabelle  \cite{TN99,LP94} which is a generic theorem prover with extensions for many logics. More recently a number of theorem provers based on dependent types \cite{PM80} have emerged including Agda \cite{AB09} and IDRIS \cite{EB11}.
 \begin{comment}
 \section{Propositional logic}
 One of the most fundamental forms of logic is propositional logic which contains operations called connectives that allows one to connect propositional variables to form sentences.
@@ -23,7 +23,7 @@ Given a set of atomic proposition names $AP$ we inductively define the set of pr
 \item given two propositional formulae $p_1$ and $p_2$ then $p_1 \circ p_2 \in AP$ where $\circ$ is a propositional connective $\circ \in \{ \wedge,\vee,\to \} $.
 \end{itemize} 
 \end{mydef}
-In order to define the semantics of propositional logic we need the notiona of a truth assignment which is a function $\tau : \{True,False\}^n \to \{True, False\}$ that gives a logical assignment to the set propositional variables $V$ which is of size $n$. This function can then be used to describe another function $\bar{\tau} : P \to \{True, False\}$ that given a propositional formula $P \in AP$ calculates a truth assignment for that formula based on $\tau$.
+In order to define the semantics of propositional logic we need the notion of a truth assignment which is a function $\tau : \{True,False\}^n \to \{True, False\}$ that gives a logical assignment to the set propositional variables $V$ which is of size $n$. This function can then be used to describe another function $\bar{\tau} : P \to \{True, False\}$ that given a propositional formula $P \in AP$ calculates a truth assignment for that formula based on $\tau$.
 
 We assigned these sentences of propositions a value of either True or False using a truth assignment 
 \begin{center}
@@ -214,7 +214,7 @@ derivation & term \\ \hline
 
 \section{Program Extraction}
 
-In the following section we shall give an overview of theoretical foundations of program extraction as it is implemented in the interactive theorem prover Minlog. We shall begin by defining the type of a formula such that if the formula is proven the type corresponds to the type of the extracted program from the proof. Secondly, we shall define the lambda calculus program that can be extracted from a proof term. These proof terms are generated in Minlog by applying the natural deduction calculus to a formual.  FInally we define what it means for a term to realize a formula.
+In the following section we shall give an overview of theoretical foundations of program extraction as it is implemented in the interactive theorem prover Minlog. We shall begin by defining the type of a formula such that if the formula is proven the type corresponds to the type of the extracted program from the proof. Secondly, we shall define the lambda calculus program that can be extracted from a proof term. These proof terms are generated in Minlog by applying the natural deduction calculus to a formula.  Finally we define what it means for a term to realize a formula.
 
 \subsection*{Type}
 Inorder to perform program extraction on a proof we must first deduce the
@@ -282,7 +282,7 @@ a type of $\tau (B)$.
 \]
 
 \subsection*{The Extracted Program}
-Given a proof term it is possible to extract a program in the lamda calculus from that depends on the type of the term. We shall now give a case by case definition of the program extracted from a formula.
+Given a proof term it is possible to extract a program in the lambda calculus from that depends on the type of the term. We shall now give a case by case definition of the program extracted from a formula.
 
  $\llbracket M \rrbracket$
 which has a type $\tau (A)$. Where $M$ is a derivation of the formula $A$ with
