--- a/BackgroundModelChecking.tex
+++ b/BackgroundModelChecking.tex
@@ -1,9 +1,9 @@
 \chapter{Background: Model Checking}
 %%%There are many systems in the modern world that are built from communicating concurrent subsystems 
-Model checking is a formal method that is typically used to reason about the correctness of finite systems with a discrete state space. Due to the nature of modern computers, such systems occur often in the area of computer science such as electronics or processes on a computer. It attempts to perform an exhaustive search of the state space to check that each state has a particular property. In this thesis is concerned with two types of model checking. One encodes the object being modelled as some form of state transition system before checking properties over that system specified in some temporal logic. This is called temporal logic model checking and was invented in the 1980s by two seperate research teams  Clarke and Emerson~\cite{EM82} and Quielle and Sifakis~\cite{JQ82}. The other encodes the system and the model checking problem over it as a SAT problem which is then decided using a SAT solver~\cite{MS00}. The very nature of this formal method in that it is essentially an exhaustive search is also its downfall. A small increase in the complexity of the computer system can lead to a large increase in the state space. This exponential increase in the complexity of model checking a particular system is called the state \emph{space explosion problem}. Most improvements to the standard model checking algorithms are designed to reduce the impact of this problem. These optimisations typically exploit the structure of the system or properties such as symmetry to cut down the state space. Examples of modern model checkers include SPIN~\cite{GH04} which performs on-the-fly model checking  based around the partial order reduction technique~\cite{DP94}  and the probablistic model checker Prism~\cite{MK11}. The Maude LTL Model Checker~\cite{ES00} also performs on-the-fly model checking and the underlying principles behind this will be discusses later in this chapter.
+Model checking is a formal method that is typically used to reason about the correctness of finite systems with a discrete state space. Due to the nature of modern computers, such systems occur often in the area of computer science such as electronics or processes on a computer. It attempts to perform an exhaustive search of the state space to check that each state has a particular property. In this thesis is concerned with two types of model checking. One encodes the object being modelled as some form of state transition system before checking properties over that system specified in some temporal logic. This is called temporal logic model checking and was invented in the 1980s by two separate research teams  Clarke and Emerson~\cite{EM82} and Quielle and Sifakis~\cite{JQ82}. The other encodes the system and the model checking problem over it as a SAT problem which is then decided using a SAT solver~\cite{MS00}. The very nature of this formal method in that it is essentially an exhaustive search is also its downfall. A small increase in the complexity of the computer system can lead to a large increase in the state space. This exponential increase in the complexity of model checking a particular system is called the state \emph{space explosion problem}. Most improvements to the standard model checking algorithms are designed to reduce the impact of this problem. These optimisations typically exploit the structure of the system or properties such as symmetry to cut down the state space. Examples of modern model checkers include SPIN~\cite{GH04} which performs on-the-fly model checking  based around the partial order reduction technique~\cite{DP94}  and the probabilistic model checker Prism~\cite{MK11}. The Maude LTL Model Checker~\cite{ES00} also performs on-the-fly model checking and the underlying principles behind this will be discusses later in this chapter.
 
-\section{Model Checkng Preliminaries}
-In the following we shall describe some logical fundementals needed to understand model checking. Firstly we shall introduce a form of state transition system namely \emph{Kripke Structures}~\cite{SK63} which are used capture the behaviour of finite discrete systems. Following this we shall introduce a language \emph{Linear Temporal Logic} which will enable us to formulate properties over these systems.
+\section{Model Checking Preliminaries}
+In the following we shall describe some logical fundamentals needed to understand model checking. Firstly we shall introduce a form of state transition system namely \emph{Kripke Structures}~\cite{SK63} which are used capture the behaviour of finite discrete systems. Following this we shall introduce a language \emph{Linear Temporal Logic} which will enable us to formulate properties over these systems.
 \medskip
 \begin{mydef}[Kripke Structure]
 Given a set of atomic propositions $AP$. We define a Kripke Structure $M$ to be a four tuple $(S, S_0, R, L)$
@@ -36,14 +36,14 @@ $$\forall s \in Reach_R(S,S_0). s \models \phi $$
 \newcommand{\sseq}[2]{s_{{[}#1 \ldots #2 {]}} }
 
 \begin{myremark}
-Given a state $s$ and a set of states $S$ we will abbreivate set membership as a predicate:
+Given a state $s$ and a set of states $S$ we will abbreviate set membership as a predicate:
  $$s \in S \leftrightarrow S(s)$$
 
-We also  abbreivate  a sequence of states $s_n \ldots s_m$ as $\sseq{n}{m}$
+We also  abbreviate  a sequence of states $s_n \ldots s_m$ as $\sseq{n}{m}$
 
 \end{myremark}
 \medskip
-Knowing whether or not an unsafe state is reachable or not so useful from an engineering point of view as it does not provide any information as to how the unsafe state was reached. It is therefore desireable to be able to formulate a \emph{path} or sequence of states through a transition system. In the case that such an unsafe state is found, model checking techniques that check paths through the transition system will be able to provide a such a path as a \emph{counter example trace}.
+Knowing whether or not an unsafe state is reachable or not so useful from an engineering point of view as it does not provide any information as to how the unsafe state was reached. It is therefore desirable to be able to formulate a \emph{path} or sequence of states through a transition system. In the case that such an unsafe state is found, model checking techniques that check paths through the transition system will be able to provide a such a path as a \emph{counter example trace}.
 \medskip
 \begin{mydef}[Path]
 Given a sequence of states $\sseq{0}{n}$ and a transition relation $R$ we define a path as follows:
@@ -54,7 +54,7 @@ $$path_R(\sseq{0}{n})  := \forall i \in \{0, \ldots, n-1 \} : R(s_i, s_{i+1})$$
 \medskip
 \subsection*{Linear Temporal Logic}
 
-In order to perform model checking over a system we typically need a formal language that allows one to speak about time. We need to be able to formalise sentences such as "the next moment of time" and "all moments in time in the future". One such logic that allows us to formalise these statements is linear temporal logic (LTL)~\cite{AP77}.  LTL belongs to a class of logics called temporal logics and is a sub-logic of Computional Tree Logic (CTL*)~\cite{EE86}. The formulas of CTL* are built from path quantifiers and temporal operations. There are two path quantifiers, the for all computational paths quantifier \textbf{A} and the exists a computational path quantifier \textbf{E}. 
+In order to perform model checking over a system we typically need a formal language that allows one to speak about time. We need to be able to formalise sentences such as "the next moment of time" and "all moments in time in the future". One such logic that allows us to formalise these statements is linear temporal logic (LTL)~\cite{AP77}.  LTL belongs to a class of logics called temporal logics and is a sub-logic of Computational Tree Logic (CTL*)~\cite{EE86}. The formulas of CTL* are built from path quantifiers and temporal operations. There are two path quantifiers, the for all computational paths quantifier \textbf{A} and the exists a computational path quantifier \textbf{E}. 
 
 LTL operations can be used to speak about paths through a system specified as a Kripke structure.
 a \emph{path} $\pi$ is a sequence of states $\sseq{0}{n}$ and a \emph{path formula} is one that holds in each given state of a path. 
@@ -182,7 +182,7 @@ indstep_M(\phi) &:= \forall s,s' \in S \wedge R(s, s') \to s \models \phi  \to s
 \end{mydef}
 \medskip
 \subsection*{Bounded Model Checking}
-One of the most important model checking techniques in terms of industrial applications is bounded model checking. All possible paths through the system are safety property checked up to a certain bound. This approach is most useful for falisification checking i.e. finding errors and their causes. It is scaleable to industrial applications as they typically exhibit all of their possible behaviours after a short number of time steps. We present a formalisation that is geared towards the application of SAT solvers~\cite{EC01}. In the following we make use of the abbreviation $\sseq{n}{m} \models \phi \leftrightarrow s_n \models \phi \wedge \ldots \wedge  s_m \models \phi$ when writing that a formula holds $\phi$ in a sequence of states $\sseq{n}{m}$.
+One of the most important model checking techniques in terms of industrial applications is bounded model checking. All possible paths through the system are safety property checked up to a certain bound. This approach is most useful for falsification checking i.e. finding errors and their causes. It is scalable to industrial applications as they typically exhibit all of their possible behaviours after a short number of time steps. We present a formalisation that is geared towards the application of SAT solvers~\cite{EC01}. In the following we make use of the abbreviation $\sseq{n}{m} \models \phi \leftrightarrow s_n \models \phi \wedge \ldots \wedge  s_m \models \phi$ when writing that a formula holds $\phi$ in a sequence of states $\sseq{n}{m}$.
 \medskip
 \begin{mydef}[Bounded Model Checking]
 Given a transition system $M$, a safety property $\phi$ and a bound $k$ we define bounded model checking $bmc_M(\phi,k)$ as follows:
@@ -206,7 +206,7 @@ We define a \Buchi automaton $A$ is a five-tuple $(L, S,T,S_0, F)$ where:
 \item $S$ is a finite set of states
 \item $T \subseteq S \times L \times S$ a transition relation
 \item $S_0 \subseteq S$ a set of initial states 
-\item $F \subseteq S$ is an acceptance condition. The automaton A accepts only the infinite runs which contain at least one state occuring in $F$
+\item $F \subseteq S$ is an acceptance condition. The automaton A accepts only the infinite runs which contain at least one state occurring in $F$
 \end{mydef}
 
 The translation of the LTL property into a \Buchi automata takes 3 steps following the approach of Gastin and Oddoux~\cite{PG01}:
