--- a/ECLSA.tex
+++ b/ECLSA.tex
@@ -16,11 +16,11 @@
 
 
 \thesischapter{Extracting a Conflict Driven Clause Learning SAT Algorithm}{Extracting a CDCL SAT Algorithm} \label{chapter:cdclproof}
-In the following chapter we shall describe how a conflict driven clause learning SAT algorithm can be extracted from a modified DPLL proof system (see chapter \ref{chapter:dpll}) in combination with a modified unit resolution proof system. The $\Conflict$ rule is modified such that a clause is learned and stored as part of the sequent. The $\Split$ rule allows for these learned clauses to be transfered up the first branch of the proof tree and then used in the proof search of the next branch. This has the implication that the $\Split$ rule is no longer symmetric and has a more imperative nature. The unit resolution proof system have been modified so that it captures the behaviour of the of the conflict graph (See chapter \ref{chapter:satbackground}.). We define a property which captures a complete\footnote{This is not completeness in the proof theoretic sense but in the sense that the set contains the right number of clauses  and that they come with associated unit resolution proofs} set of unit resolution derived clauses with respect to a valuation such that each resolved clause has a unit resolution derivation from a clause the original formula. The extracted program makes use of these clause during the search for a satisfiying assignment. If this set of clauses becomes empty then the current valuation forms a model of the formula. An occurence of the empty clause in this set of clauses indicates that a conflict has a occured and a clause is learned and passed up the branch of the proof search. In order to facilitate clause learning, the valuations used in this proof have a modification to store the rule and level at which a literal has been added. 
+In the following chapter we shall describe how a conflict driven clause learning SAT algorithm can be extracted from a modified DPLL proof system (see chapter \ref{chapter:dpll}) in combination with a modified unit resolution proof system. The $\Conflict$ rule is modified such that a clause is learned and stored as part of the sequent. The $\Split$ rule allows for these learned clauses to be transferred up the first branch of the proof tree and then used in the proof search of the next branch. This has the implication that the $\Split$ rule is no longer symmetric and has a more imperative nature. The unit resolution proof system have been modified so that it captures the behaviour of the of the conflict graph (See chapter \ref{chapter:satbackground}.). We define a property which captures a complete\footnote{This is not completeness in the proof theoretic sense but in the sense that the set contains the right number of clauses  and that they come with associated unit resolution proofs} set of unit resolution derived clauses with respect to a valuation such that each resolved clause has a unit resolution derivation from a clause the original formula. The extracted program makes use of these clause during the search for a satisfying assignment. If this set of clauses becomes empty then the current valuation forms a model of the formula. An occurrence of the empty clause in this set of clauses indicates that a conflict has a occurred and a clause is learned and passed up the branch of the proof search. In order to facilitate clause learning, the valuations used in this proof have a modification to store the rule and level at which a literal has been added. 
 
 
 \section{Preliminaries}
-The definitions of variables, literals, clauses, formulae and models remain the same as in chapter \ref{chapter:dpll}. In the following we shall present prelimary definitions that subsequently been added or modified: \\
+The definitions of variables, literals, clauses, formulae and models remain the same as in chapter \ref{chapter:dpll}. In the following we shall present preliminary definitions that subsequently been added or modified: \\
 %
 %\hspace{3mm}
 %
@@ -52,7 +52,7 @@ The definitions of variables, literals, clauses, formulae and models remain the 
 %%and we will identify it with a finite set of clauses 
 %%%$\{ C_1 , \ldots , C_k \}$, representing the conjunction of the $C_i$.
 %
-\item A \emph{valuation} $\Gamma$ is a finite set of literals paired with a natural number and a label $D \in \{S, U\}$ indcating that they are either a split or unit literal. representing the decision level of that literal $\{ (D_1 \, l_1 \, n_1), \ldots , ( D_k \, l_k \, n_k) \}$. This set is to be viewed as the conjunction of the elements.
+\item A \emph{valuation} $\Gamma$ is a finite set of literals paired with a natural number and a label $D \in \{S, U\}$ indicating that they are either a split or unit literal. representing the decision level of that literal $\{ (D_1 \, l_1 \, n_1), \ldots , ( D_k \, l_k \, n_k) \}$. This set is to be viewed as the conjunction of the elements.
 %
 \item We define the literal set of valuation $\lit{\Gamma}$ as follows:
 	 $$ \lit{\Gamma} := \{l | (D \, l \, n) \in \Gamma\}$$
@@ -155,7 +155,7 @@ of two rules:
 \end{mydef}
 
 %
-The modified unit resolution proof system contains additional subsumption rules  and arguments in order to implement a form of clause learning. When a conflict is reached a clause is learned representing the decision assignments which caused the conflict in that clause to occur similar to the GRASP algorithm \cite{MS99}.  Above the derivation turnstyle the formula and valuation from which subsumptions can be made is stored. The decision ($\Split$) assignments used to derive the clause are stored on the left hand side of the derivability sign. This are added during an application of the $\SplitSub$ rule which subsumes a decision assignment from the valuation to form a unit clause. Applications of the $\UnitSub$ and $\Sub$ rules do not cause decisions to be added to this valuation.   \\
+The modified unit resolution proof system contains additional subsumption rules  and arguments in order to implement a form of clause learning. When a conflict is reached a clause is learned representing the decision assignments which caused the conflict in that clause to occur similar to the GRASP algorithm \cite{MS99}.  Above the derivation turnstile the formula and valuation from which subsumptions can be made is stored. The decision ($\Split$) assignments used to derive the clause are stored on the left hand side of the derivability sign. This are added during an application of the $\SplitSub$ rule which subsumes a decision assignment from the valuation to form a unit clause. Applications of the $\UnitSub$ and $\Sub$ rules do not cause decisions to be added to this valuation.   \\
 \medskip
 \begin{mydef}[Modified Unit Resolution Proof System] The modified unit resolution proof system consists of four rules:
 \begin{center}
@@ -218,7 +218,7 @@ The resolution rule is trivially equivalent to the other resolution rule by the 
 \end{mytheorem}
 \medskip
 %%
-%% Do we want a theorem stating that the modifed resolution calculus derives the same clauses as the old resolution calculus?
+%% Do we want a theorem stating that the modified resolution calculus derives the same clauses as the old resolution calculus?
 %%
 The soundness of the modified unit resolution proof system is proven by showing that if there is a derivation of a clause $C$ from a valuation $\Gamma$ and a formula $\Delta$ then $\Gamma$ and $\Delta$ model $C$. \\
 \medskip
