--- a/verifyertms.tex
+++ b/verifyertms.tex
@@ -6,7 +6,7 @@ It is stated by its developers that Real Time Maude is not first and foremost a 
 
 \section{Simulating The Behaviour of ERTMS}
 
-We will now see how this executable specification can be used to simulate and analyse the perofrmance of the modelled system. Simulation of the system up to a given time $n$ is achieved by rewriting the initial state of the system to each of the intermediate time steps $0 \ldots n$. A simple Haskell program has been written that can parse the output of each step, extract the relevant data and then plot a graph.
+We will now see how this executable specification can be used to simulate and analyse the performance of the modelled system. Simulation of the system up to a given time $n$ is achieved by rewriting the initial state of the system to each of the intermediate time steps $0 \ldots n$. A simple Haskell program has been written that can parse the output of each step, extract the relevant data and then plot a graph.
 
 We use an initial state containing two trains one of which is slower (train1) than the other (train2), an interlocking and a radio block processor. The faster train will eventually catch up with the slow train and it waits for that train to clear all successive track segments before proceeding. The trains start at positions on opposing sides of the track with train1 starting at 0 and train2 starting at 150. The RBC and the interlocking are both initialised with the trains in these positions. In Maude this initial state is modelled as follows. Firstly, we define the initial states of the component objects individually:
 
@@ -27,21 +27,21 @@ The  interlocking is initially idle, the request variable is set to zero, the tr
                          curreq : empty > .
 \end{lstlisting}
 
-Like the interlocking, the RBC is also initially idle. Since the lasttrain variable has not effect in this state and will be set in any successive control flow we simply set it to be train1. The movement authorites  and positions of the trains are set within the ma and pos mapping respectively and the current request is empty.  
+Like the interlocking, the RBC is also initially idle. Since the lasttrain variable has not effect in this state and will be set in any successive control flow we simply set it to be train1. The movement authorities  and positions of the trains are set within the ma and pos mapping respectively and the current request is empty.  
 
 \begin{lstlisting}[caption = The intital state of train1 in Maude]
  eq initialtrainstate1 = < train1 : Train | state : acc,  dist : 0, 
                            speed : 1, ac : 1, ma : 49, 
                            tseg : 0, maxspeed : 4 > .
 \end{lstlisting}
-We set the train1 to be accellerating initally with a distance and speed of 0 its movement authority is 49, it is in the 0 track segment and has a maxspeed of 4. 
+We set the train1 to be accelerating initially with a distance and speed of 0 its movement authority is 49, it is in the 0 track segment and has a maxspeed of 4. 
 
 \begin{lstlisting}[caption = The intial state of train2 in Maude]
 eq initialtrainstate2  = < train2 : Train | state : acc, dist : 150, 
                            speed : 1, ac : 1, ma : 199,
                            tseg : 3, maxspeed : 7 > .
 \end{lstlisting}
-Like train1, train2 is also accellerating initially and has a speed of 0.  Unlike train1 it has a distance of 150, a movement authority of 199, it is in the 4th track segment number 3 and has a maxspeed of 4. Both trains have an accelleration of 1. 
+Like train1, train2 is also accelerating initially and has a speed of 0.  Unlike train1 it has a distance of 150, a movement authority of 199, it is in the 4th track segment number 3 and has a maxspeed of 4. Both trains have an acceleration of 1. 
 
 Using these initial states for the individual objects we can form the initial state for our pentagon example using the following command:
 \begin{lstlisting}
@@ -94,11 +94,11 @@ Result ClockedSystem :
 \caption{A graph comparing the distances of train1 and train2}
 \end{figure}
 
-The first graph (See fig \ref{t1graph}.) shows the speed and distance of train1 over time. The train spends the majority of its time at max speed however there is a slight decrease in speed when a movement authority is requested. The distance of the train increases in roughly a linear fashion. The second graph (See fig \ref{t2graph}.) shows the speed and distance of train2 over time. The train brakes repeatedly and at one position comes to a complete stop as it waits for the slower train to progress and exit its current track segment. The distance time graph shows this stop/start behaviour through a wavey appearence. The final graph (See fig \ref{t1t2graph}.) shows that there is a consistent distance between the two trains of at least one track segment. Due to the discretisation of time we have had to favour braking over accelerating in order for the train to stop behind its movement authority. The speed of the train decreases on a transition from accelerating or full speed states to a braking state but does not increase speed immediatley on a transition from a braking to accelerating state. This behaviour can be see in the speed graph for train2 (See fig \ref{t2graph}.) where there are several sharp peaks where the max speed has only been in place for one time step. In contrast when the train transitions from braking to accelerating there is always a flat section of constant speed. These flat sections of constant speed also occur when the train is braking and the train jumps back into the accelerating state for one time step to ensure the train brakes as closely to the end of movement authority as possible.
+The first graph (See fig \ref{t1graph}.) shows the speed and distance of train1 over time. The train spends the majority of its time at max speed however there is a slight decrease in speed when a movement authority is requested. The distance of the train increases in roughly a linear fashion. The second graph (See fig \ref{t2graph}.) shows the speed and distance of train2 over time. The train brakes repeatedly and at one position comes to a complete stop as it waits for the slower train to progress and exit its current track segment. The distance time graph shows this stop/start behaviour through a wavy appearance. The final graph (See fig \ref{t1t2graph}.) shows that there is a consistent distance between the two trains of at least one track segment. Due to the discretisation of time we have had to favour braking over accelerating in order for the train to stop behind its movement authority. The speed of the train decreases on a transition from accelerating or full speed states to a braking state but does not increase speed immediately on a transition from a braking to accelerating state. This behaviour can be see in the speed graph for train2 (See fig \ref{t2graph}.) where there are several sharp peaks where the max speed has only been in place for one time step. In contrast when the train transitions from braking to accelerating there is always a flat section of constant speed. These flat sections of constant speed also occur when the train is braking and the train jumps back into the accelerating state for one time step to ensure the train brakes as closely to the end of movement authority as possible.
 
 
 \section{The Maude Linear Temporal Logic Model Checker}
-The Real Time Maude system employs the Maude LTL Model Checker on-the-fly LTL model checker for \cite{ES00} verification purposes.  This is a useful automatic tool which allows for the verification and analysis of real time systems. In addition to the positive verification results in which a safety property holds,  the system produces, in the case of a negative verification result, a counter example trace which describes how the error occured from the initial state of the system.
+The Real Time Maude system employs the Maude LTL Model Checker on-the-fly LTL model checker for \cite{ES00} verification purposes.  This is a useful automatic tool which allows for the verification and analysis of real time systems. In addition to the positive verification results in which a safety property holds,  the system produces, in the case of a negative verification result, a counter example trace which describes how the error occurred from the initial state of the system.
 
  
 
@@ -129,7 +129,7 @@ eq {trackseg(REST)REST2} |= P = {REST REST2} |= P .
 
 \subsection*{Checking the  Correctness of the Specification}
 
-We have applied model checking to check several fundemental correctness properties of the pentagon examples behaviour. We begin by showing that it is not possible for a train to exceed its max speed. We formulate this as a model checking problem over the pentagon example.  We can check that a train has a certain speed as follows:
+We have applied model checking to check several fundamental correctness properties of the pentagon examples behaviour. We begin by showing that it is not possible for a train to exceed its max speed. We formulate this as a model checking problem over the pentagon example.  We can check that a train has a certain speed as follows:
 
 \begin{lstlisting}[caption = The speed property]
 op train-s : Oid Nat -> Prop [ctor] .
@@ -166,7 +166,7 @@ eq {REST < O1 : Train | state : S >} |= train-cons(O1)
 
 This predicate holds if there is a train in the configuration with object identifier O1 and a state cons. 
 
-We can use these two properties and others formulated in a similar fashion to formulate model checkng properties which can be used check the correctness of our modelling approach. We can define three safety conditions, one that states "train1 is in the cons state if and only it is at its max speed". The second states "if the speed of train1 is zero then it is either in the cons, stop or acc states and if the train is in the stop state then its speed is zero". The final states "it is not the case that there exists a state in which the speed of train1 is 5" (train1 has a max speed of 4). 
+We can use these two properties and others formulated in a similar fashion to formulate model checking properties which can be used check the correctness of our modelling approach. We can define three safety conditions, one that states "train1 is in the cons state if and only it is at its max speed". The second states "if the speed of train1 is zero then it is either in the cons, stop or acc states and if the train is in the stop state then its speed is zero". The final states "it is not the case that there exists a state in which the speed of train1 is 5" (train1 has a max speed of 4). 
 
 \begin{lstlisting}
 Correct1 := (mc initialstate2 |=t  
@@ -181,7 +181,7 @@ Correct3 := (mc initialstate2 |=t [] ((train-s(train1,0) =>
 \end{lstlisting}
 
 \subsection*{Defining "No Overlapping Movement Authorities"}
-We verifying the safety condition "The movment authorities of two trains do not overlap" by model checking three safety properties MA1, MA2 and MA3 that correspond to checking the different possible safe positions over movement authorities and trains on the track. To do this we define a satisfaction relation for two Maude operations of type $\mathbf{Prop}$ which capture each of these safety properties. The first of which can be seen below:
+We verifying the safety condition "The movement authorities of two trains do not overlap" by model checking three safety properties MA1, MA2 and MA3 that correspond to checking the different possible safe positions over movement authorities and trains on the track. To do this we define a satisfaction relation for two Maude operations of type $\mathbf{Prop}$ which capture each of these safety properties. The first of which can be seen below:
 
 \begin{lstlisting}
 eq {REST < O1 : Train |  dist : D1 , ma : M1 > 
@@ -223,7 +223,7 @@ The Maude LTL model checker is then called using the following command:
 \begin{center}
 \texttt{(mc initialstate2 |=t [] nomaoverlap1(train1,train2) in time <= 100 .)}
 \end{center}
-The command states that we are applying timed model checking to check that it is globally true that the movement authorities of the trains do not over lap at all moments in time less than or equal to 100. This results in the following output from Real Time Maude which indicates that the property was succesfully verified in 1 minutes and 32 seconds taking the system approximately 76 million rewrites.
+The command states that we are applying timed model checking to check that it is globally true that the movement authorities of the trains do not over lap at all moments in time less than or equal to 100. This results in the following output from Real Time Maude which indicates that the property was successfully verified in 1 minutes and 32 seconds taking the system approximately 76 million rewrites.
 \begin{lstlisting}[caption = No overlapping movement authorities model checking result]
 rewrites: 76099490 in 91776ms cpu (91776ms real) 
 (829187 rewrites/second)
@@ -234,7 +234,7 @@ in MODEL-CHECK-ERTMS8
 Result Bool : true
 \end{lstlisting}
 
-Unfortunately the Maude LTL model checker can not detect the congruence between difference configurations of control system. Therefore the state space is infinite and it is impossible to do untimed model checking on the above model checking problem for the pentagon example. It is however possible to do timed model checking within a reasonable time limit that allows for all behaviours of the system to be verified. The junction example does not suffer from this problem as the state space is finite and in addition, it has additional mechanisms to remove non-determinism from the model which dramatically cuts down on the state space.
+Unfortunately the Maude LTL model checker can not detect the congruence between difference configurations of control system. Therefore the state space is infinite and it is impossible to do un-timed model checking on the above model checking problem for the pentagon example. It is however possible to do timed model checking within a reasonable time limit that allows for all behaviours of the system to be verified. The junction example does not suffer from this problem as the state space is finite and in addition, it has additional mechanisms to remove non-determinism from the model which dramatically cuts down on the state space.
 
 The following command is used to model check the safety property P1 for the junction example.
 
@@ -273,7 +273,7 @@ MA1 (Realistic Pentagon) & 70 & 79.948s \\
 \end{tabular}
 \end{center}
 
-Even though the Real Time Maude system is unable to performed untimed model checking on this example it can still perform bounded model checking of a large enough portition of the state space for us to be
+Even though the Real Time Maude system is unable to performed untimed model checking on this example it can still perform bounded model checking of a large enough portion of the state space for us to be
 
 \section{Conclusion}
  We have presented the first attempt at modelling and verifying the combined ERTMS and interlocking system.
